2002-05-17  Nick Garnett  <nickg@redhat.com>

	* src/vectors.S: Rearranged interrupt stack definitions to make it
	work correctly in SMP case. The #ifdefs were improperly nested.

2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>

	* src/vectors.S:
	Don't use .file as it can confuse debugging since the .file
	doesn't contain the path and therefore the debugger will never
	know where it lives! This conflicts with using -Wa,--gstabs.

2002-04-15  Jonathan Larmour  <jlarmour@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Add extra sig argument to
	__do_syscall.

2002-01-08  Nick Garnett  <nickg@redhat.com>

	* include/hal_arch.h:
	Removed consideration of lazy FPU context switching in determining
	the size of CYGNUM_HAL_STACK_CONTEXT_SIZE, since it does not
	actually make any difference - and previously resulted in too
	small a value for CYGNUM_HAL_STACK_SIZE_MINIMUM.

2002-01-07  Nick Garnett  <nickg@redhat.com>

	* src/vectors.S (__fpu_switch_vsr): Fixed register usage bug.

2001-12-19  Mark Salter  <msalter@redhat.com>

	* include/arch.inc: Use fnsave instead of fsave.
	* src/vectors.S: Ditto.

2001-12-11  Nick Garnett  <nickg@redhat.com>

	* src/i386.ld (SECTION_rel__got): Added entry for
	.rel.gnu.linkonce* that more recent versions of the compiler seem
	to generate.

2001-12-07  Jonathan Larmour  <jlarmour@redhat.com>

	* src/i386.ld: Add missing close bracket.

2001-12-06  Jonathan Larmour  <jlarmour@redhat.com>

	* src/i386.ld: Add .rel.text and .rel.data sections to avoid
	linker warnings, which can cause the linker to then get confused.
	(From nickc)

2001-11-21  Mark Salter  <msalter@redhat.com>

	* src/i386_stub.c (__do_read_msr): Add mem_fault handling.
	(__do_write_msr): Ditto.

2001-10-19  Ian Campbell  <icampbell@arcom.co.uk>

	* include/hal_cache.h: Provide HAL_DCACHE_IS_ENABLED and
	HAL_ICACHE_IS_ENABLED macros.

2001-10-15  Mark Salter  <msalter@redhat.com>

	* src/i386_stub.c (hal_get_gdb_registers): Save idt/gdt in GDB regs.